--- a/LogIn/LogIn/LogIn/Pages/LogInPage.xaml
+++ b/LogIn/LogIn/LogIn/Pages/LogInPage.xaml
@@ -1,8 +1,9 @@
-﻿<Page x:Class="LogIn.LogInPage"
+﻿<Page
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="LogIn.LogInPage"
       mc:Ignorable="d" 
       d:DesignHeight="700" d:DesignWidth="700"
       Title="LogInPage">
@@ -31,13 +32,13 @@
                             <!--sign up subtext-->
                             <TextBlock Padding="0 10" Text="It's about to get interesting" FontSize="{StaticResource FontSizeSmall}" FontFamily="{StaticResource LatoThin}"
                                    Foreground="{StaticResource ForegroundLightBrush}"/>
-
-                            <TextBox Height="50" FontSize="15" Foreground="{StaticResource ForegroundLightBrush}"></TextBox>
-                            <TextBox Height="50"  FontSize="15" Foreground="{StaticResource ForegroundLightBrush}"></TextBox>
-                            <Button Content="Next" HorizontalAlignment="Center" Padding="50 10" Margin="0 25" FontSize="11"></Button>
+                            <TextBox x:Name="txtUsername" Tag="Email" Foreground="{StaticResource BackgroundLightBrush}" Padding="10"/>
+                            <PasswordBox  x:Name="txtPassword" Foreground="{StaticResource BackgroundLightBrush}" Padding="10" ></PasswordBox>
+                                <!--<TextBox x:Name="txtPassword" Tag="Password" Foreground="{StaticResource BackgroundLightBrush}" Padding="10"/>-->
+                            <Button Content="Continue" Click="Button_Click" HorizontalAlignment="Center" Padding="50 10" Margin="0 25" FontSize="11"/>
                         </StackPanel>
                     </Border>
-                    <Button Content="I already have an account" HorizontalAlignment="Center" Padding="50 10" Margin="0 10" FontSize="11"></Button>
+                    <Button Content="I already have an account" HorizontalAlignment="Center" Padding="50 10" Margin="0 10" FontSize="11"/>
                 </StackPanel>
             </ScrollViewer>
         </Grid>
