--- a/LogIn/LogIn/LogIn/Dashboard.xaml
+++ b/LogIn/LogIn/LogIn/Dashboard.xaml
@@ -13,112 +13,11 @@
         WindowStartupLocation="CenterScreen"
         Title="Dashboard" Height="450" Width="800">
     <Window.Resources>
-        <Style TargetType="{x:Type local:Dashboard}">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Window}">
-                        <!--Outer border with the dropshadow margin-->
-                        <Border Padding="{Binding OuterMarginSizeThickness, FallbackValue=10}">
-                            <!--main window outline-->
-                            <Grid>
-                                <!--Opacity mask for corners on grid-->
-                                <Border x:Name="Container"
-                                        Background="{StaticResource BackgroundLightBrush}"
-                                        CornerRadius="{Binding WindowCornerRadius, FallbackValue=10}"
-                                        ></Border>
-                                <!--window border and dropshadow -->
-                                <Border CornerRadius="{Binding WindowCornerRadius, FallbackValue=10}">
-                                    <Border.Background>
-                                        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
-                                            <GradientStop Color="#FF2CD18E" Offset="1"/>
-                                            <GradientStop Color="#FF192D4F"/>
-                                        </LinearGradientBrush>
-                                    </Border.Background>
-                                    <Border.Effect>
-                                        <DropShadowEffect ShadowDepth="0" Opacity="0.2"/>
-                                    </Border.Effect>
-                                </Border>
-                                <!--main window content-->
-                                <Grid>
-                                    <!--corner clipping-->
-                                    <Grid.OpacityMask>
-                                        <VisualBrush Visual="{Binding ElementName=Container}"/>
-                                    </Grid.OpacityMask>
-                                    <Grid.RowDefinitions>
-                                        <!--Title Bar-->
-                                        <RowDefinition Height="{Binding TitleHeightGridLength, FallbackValue=42}"/>
-
-                                        <!--Window content-->
-                                        <RowDefinition Height="*"/>
-
-                                    </Grid.RowDefinitions>
-                                    <!--Title bar-->
-                                    <Grid Grid.Column="0" Panel.ZIndex="1">
-                                        <Grid.ColumnDefinitions>
-                                            <!--Icon-->
-                                            <ColumnDefinition Width="auto"/>
-                                            <!--Title-->
-                                            <ColumnDefinition Width="*"/>
-                                            <!--Windows Button-->
-                                            <ColumnDefinition Width="auto"/>
-                                        </Grid.ColumnDefinitions>
-                                        <!--Icon-->
-                                        <Button ToolTip="Opciones" Style="{StaticResource SystemIconButton}" Command="{Binding MenuCommand}">
-                                            <Image Source="Assets/logo-oficial.png"/>
-                                        </Button>
-                                        <!--Title-->
-                                        <Viewbox Grid.Column="0" Grid.ColumnSpan="3" Margin="0" >
-                                            <StackPanel>
-                                                <TextBlock Margin="0 10 0 0" FontSize="{StaticResource FontSizeRegular}" FontFamily="{StaticResource LatoRegular}">
-                                                    <Run Text="M" Foreground="{StaticResource ForegroundVeryDarkBrush}"/><Run Text="I" Foreground="{StaticResource WordBlueBrush}"/>
-                                                    <Run Text="Technologies" Foreground="{StaticResource ForegroundTechnologiesBrush}"/>
-                                                </TextBlock>
-                                                <TextBlock Text="Application" Foreground="{StaticResource ForegroundDarkBrush}" TextAlignment="Center" FontSize="{StaticResource FontSizeSmall}"/>
-
-                                            </StackPanel>
-                                        </Viewbox>
-                                        <!--Window buttons-->
-                                        <StackPanel Grid.Column="2" Orientation="Horizontal">
-                                            <Button ToolTip="Minimizar" Command="{Binding MinimizeCommand}" Style="{StaticResource WindowControlButton}" Content="-"/>
-                                            <Button ToolTip="Maximizar" Command="{Binding MaximizeCommand}" Style="{StaticResource WindowControlButton}" Content="[]"/>
-                                            <Button ToolTip="Cerrar" Command="{Binding CloseCommand}" Style="{StaticResource WindowCloseButton}" Content="X"/>
-                                        </StackPanel>
-                                    </Grid>
-
-                                    <!--Page Content-->
-                                    <Border Grid.Row="2" Padding="{Binding InnerContentPadding}">
-                                        <Grid>
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition Height="*"/>
-                                                <RowDefinition Height="3*"/>
-                                                
-                                            </Grid.RowDefinitions>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="10*"/>
-                                                <ColumnDefinition Width="8*"/>
-                                                <ColumnDefinition Width="10*"/>
-                                            </Grid.ColumnDefinitions>
-                                            <Viewbox  Grid.Column="1" Grid.Row="0">
-                                            <StackPanel>
-                                                <TextBlock VerticalAlignment="Top" HorizontalAlignment="Center" FontFamily="{StaticResource LatoThin}" FontSize="{StaticResource FontSizeSmall}" Text="Dashboard" Foreground="{StaticResource ForegroundTechnologiesBrush}"/>
-                                            </StackPanel>
-                                            </Viewbox>
-                                        </Grid>
-                                        <!--<ContentPresenter Content="{TemplateBinding Content}"/>-->
-                                    </Border>
-
-                                </Grid>
-                            </Grid>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
     </Window.Resources>
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-            <GradientStop Color="Black" Offset="0"/>
-            <GradientStop Color="White" Offset="1"/>
+            <GradientStop Color="#FF192D4F" Offset="0"/>
+            <GradientStop Color="#FF2CD18E" Offset="1"/>
         </LinearGradientBrush>
     </Window.Background>
     <WindowChrome.WindowChrome>
@@ -127,8 +26,84 @@
             CornerRadius="0"
             GlassFrameThickness="0"/>
     </WindowChrome.WindowChrome>
-    <Grid Background="Transparent">
-        <Frame x:Name="MainFrame" Content="{Binding CurrentPage, Converter={local:ApplicationPageValueConverter}}"/>
-    </Grid>
+    <Border Padding="{Binding OuterMarginSizeThickness, FallbackValue=10}">
+
+        <Grid Background="Transparent">
+            <Grid ShowGridLines="False">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="{Binding TitleHeightGridLength, FallbackValue=42}"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="3*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="10*"/>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="10*"/>
+                    <ColumnDefinition Width="5*"/>
+                </Grid.ColumnDefinitions>
+                
+                <!--Title bar-->
+                <Grid Grid.Column="0" Grid.ColumnSpan="7" Panel.ZIndex="1">
+                    <Grid.ColumnDefinitions>
+                        <!--Icon-->
+                        <ColumnDefinition Width="auto"/>
+                        <!--Title-->
+                        <ColumnDefinition Width="*"/>
+                        <!--Windows Button-->
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+                    <!--Icon-->
+                    <Button ToolTip="Opciones" Style="{StaticResource SystemIconButton}" Command="{Binding MenuCommand}">
+                        <Image Source="Assets/logo-oficial.png"/>
+                    </Button>
+                    <!--Title-->
+                    <Viewbox Grid.Column="0" Grid.ColumnSpan="3" Margin="0 3" >
+                        <StackPanel>
+                            <TextBlock FontSize="{StaticResource FontSizeRegular}" FontFamily="{StaticResource LatoRegular}">
+                                                    <Run Text="M" Foreground="{StaticResource ForegroundVeryDarkBrush}"/><Run Text="I" Foreground="{StaticResource WordBlueBrush}"/>
+                                                    <Run Text="Technologies" Foreground="{StaticResource ForegroundTechnologiesBrush}"/>
+                            </TextBlock>
+                            <TextBlock Text="Application" Foreground="{StaticResource ForegroundDarkBrush}" TextAlignment="Center" FontSize="{StaticResource FontSizeSmall}"/>
+
+                        </StackPanel>
+                    </Viewbox>
+                    <!--Window buttons-->
+                    <StackPanel Grid.Column="2" Orientation="Horizontal">
+                        <Button ToolTip="Minimizar" Command="{Binding MinimizeCommand}" Style="{StaticResource WindowControlButton}" Content="-"/>
+                        <Button ToolTip="Maximizar" Command="{Binding MaximizeCommand}" Style="{StaticResource WindowControlButton}" Content="[]"/>
+                        <Button ToolTip="Cerrar" Command="{Binding CloseCommand}" Style="{StaticResource WindowCloseButton}" Content="X"/>
+                    </StackPanel>
+                </Grid>
+                <Viewbox  Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="1">
+                    <StackPanel>
+                        <TextBlock VerticalAlignment="Top" HorizontalAlignment="Center" FontFamily="{StaticResource LatoThin}" FontSize="{StaticResource FontSizeSmall}" Text="Dashboard" Foreground="{StaticResource ForegroundTechnologiesBrush}"/>
+                    </StackPanel>
+                </Viewbox>
+                <Label Grid.Column="0" Grid.Row="2" Content="User: " HorizontalAlignment="Center" VerticalAlignment="Bottom" Foreground="{StaticResource BackgroundVeryLightBrush}" FontFamily="{StaticResource LatoThin}" FontSize="{StaticResource FontSizeRegular}"/>
+                <Label Grid.Column="0" Grid.Row="3" Content="Password: " HorizontalAlignment="Center" VerticalAlignment="Bottom" Foreground="{StaticResource BackgroundVeryLightBrush}" FontFamily="{StaticResource LatoThin}" FontSize="{StaticResource FontSizeRegular}"/>
+                <Label Grid.Column="3" Grid.Row="3" Content="Mail: " HorizontalAlignment="Center" VerticalAlignment="Bottom" Foreground="{StaticResource BackgroundVeryLightBrush}" FontFamily="{StaticResource LatoThin}" FontSize="{StaticResource FontSizeRegular}"/>
+                <Label Grid.Column="3" Grid.Row="2" Content="Phone: " HorizontalAlignment="Center" VerticalAlignment="Bottom" Foreground="{StaticResource BackgroundVeryLightBrush}" FontFamily="{StaticResource LatoThin}" FontSize="{StaticResource FontSizeRegular}"/>
+
+                <TextBox Padding="8" Grid.Column="1" Grid.Row="2" Foreground="{StaticResource BackgroundVeryLightBrush}" FontFamily="{StaticResource LatoThin}" FontSize="{StaticResource FontSizeRegular}"></TextBox>
+                <TextBox Padding="8" Grid.Column="1" Grid.Row="3" Foreground="{StaticResource BackgroundVeryLightBrush}" FontFamily="{StaticResource LatoThin}" FontSize="{StaticResource FontSizeRegular}"></TextBox>
+                <TextBox Padding="8" Grid.Column="4"  Grid.Row="2" Foreground="{StaticResource BackgroundVeryLightBrush}" FontFamily="{StaticResource LatoThin}" FontSize="{StaticResource FontSizeRegular}"></TextBox>
+                <TextBox Padding="8" Grid.Column="4"  Grid.Row="3" Foreground="{StaticResource BackgroundVeryLightBrush}" FontFamily="{StaticResource LatoThin}" FontSize="{StaticResource FontSizeRegular}"></TextBox>
+                <Button Grid.Column="3" Grid.Row="4" Content="Add" Margin="10"></Button>
+                <Button Grid.Column="4" Grid.Row="4" Content="Modify" Margin="10" Background="#FFFFA80E" BorderBrush="#FFF3BA21"></Button>
+                <Button Grid.Column="5" Grid.Row="4" Content="Delete" Background="Red" Margin="10" BorderBrush="#FFFF3A3A"></Button>
+
+                <StackPanel Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="5" Grid.RowSpan="4">
+                    <DataGrid x:Name="tabla"  Height="auto">
+                    </DataGrid>
+                </StackPanel>
+            </Grid>
+        </Grid>
+    </Border>
 </Window>
 
